[package]
name = "actix-book"
version = "0.7.0"
authors = ["Actix Project and Contributors"]
readme = "README.md"
keywords = ["http", "web", "framework", "async", "futures"]
homepage = "https://github.com/actix/book/"
repository = "https://github.com/actix/book.git"
documentation = "https://docs.rs/actix-web/"
categories = ["network-programming", "asynchronous",
              "web-programming::http-server",
              "web-programming::http-client",
              "web-programming::websocket"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", "/.github", ".cargo/config", "appveyor.yml"]
build = "build.rs"

[lib]
crate-type = ["dylib"]

[dependencies]
actix = "^0.8"

flate2 = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.6"

# io
bytes = "0.4"
futures = "0.1"
http = "0.1"

[dev-dependencies]
env_logger = "0.6"
skeptic = "0.13"
serde_derive = "1.0"

[build-dependencies]
skeptic = "0.13"
futures = "0.1"
