[package]
name = "actix-book"
version = "0.7.0"
authors = ["Actix Project and Contributors"]
readme = "README.md"
keywords = ["http", "web", "framework", "async", "futures"]
homepage = "https://github.com/actix/book/"
repository = "https://github.com/actix/book.git"
documentation = "https://docs.rs/actix/"
categories = ["network-programming", "asynchronous",
              "web-programming::http-server",
              "web-programming::http-client",
              "web-programming::websocket"]
license = "MIT OR Apache-2.0"
exclude = [".gitignore", "/.github", ".cargo/config"]
edition = "2021"

[dependencies]
actix = "0.13"
actix-rt = "2.7"
doc-comment = "0.3"
